# gtestbox

./: CMakeLists.txt  README.md  person.cpp  person.hpp
tests/: test_defaults.cpp  test_hello.cpp
